--- a/index.html
+++ b/index.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Specifies the character encoding for the HTML document -->
     <meta charset="UTF-8" />
+    <!-- Sets the document mode for Internet Explorer -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Ensures the webpage is responsive by setting the viewport width to the device width -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Sets the title of the webpage displayed in the browser tab -->
     <title>Flipping Card UI Design</title>
+    <!-- Links an external CSS file to style the HTML document -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section>
       <div class="container">
+        <!-- Front face of the card -->
         <div class="card front-face">
           <header>
+            <!-- Logo section with an image and title -->
             <span class="logo">
               <img src="D:\HTML\Credit Card\Logo.png" alt="" />
               <h5>Master Card</h5>
             </span>
+            <!-- Chip image on the card -->
            <img src="D:\HTML\Credit Card\chip.png" alt="" class="chip" />
           </header>
 
           <div class="card-details">
+            <!-- Card details section including card number and cardholder name -->
             <div class="name-number">
               <h6>Card Number</h6>
               <h5 class="number">8050 2030 3020 5040</h5>
               <h5 class="name">Sanjida Rahman Supti</h5>
             </div>
-
+             <!-- Card expiration date section -->
             <div class="valid-date">
               <h6>Valid Thru</h6>
               <h5>05/28</h5>
             </div>
           </div>
         </div>
-
+        <!-- Back face of the card -->
         <div class="card back-face">
+          <!-- Customer service information -->
           <h6>
             For customer service call +977 4343 3433 or email at
             mastercard@gmail.com
           </h6>
+          <!-- Magnetic strip representation -->
           <span class="magnetic-strip"></span>
+           <!-- Signature section with a security code -->
           <div class="signature"><i>005</i></div>
         </div>
       </div>
