--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Ensures the webpage is responsive by setting the viewport width to the device width -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Sets the title of the webpage displayed in the browser tab -->
     <title>Flipping Card UI Design</title>
-    <!-- Links an external CSS file to style the HTML document -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -20,11 +18,10 @@
           <header>
             <!-- Logo section with an image and title -->
             <span class="logo">
-              <img src="D:\HTML\Credit Card\Logo.png" alt="" />
+              <img src="/Logo.png" alt="" />
               <h5>Master Card</h5>
             </span>
-            <!-- Chip image on the card -->
-           <img src="D:\HTML\Credit Card\chip.png" alt="" class="chip" />
+           <img src="/chip.png" alt="" class="chip" />
           </header>
 
           <div class="card-details">
