--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <img src="/Logo.png" alt="" />
               <h5>Master Card</h5>
             </span>
-           <img src="/chip.png" alt="" class="chip" />
+           <img src="chip.png" alt="" class="chip" />
           </header>
 
           <div class="card-details">
