--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <header>
             <!-- Logo section with an image and title -->
             <span class="logo">
-              <img src="/Logo.png" alt="" />
+              <img src="Logo.png" alt="" />
               <h5>Master Card</h5>
             </span>
            <img src="chip.png" alt="" class="chip" />
